Update Hetzner CSI driver
Signed-off-by: Artiom Diomin <artiom@kubermatic.com>

--- a/addons/default-storage-class/storage-class.yaml
+++ b/addons/default-storage-class/storage-class.yaml
@@ -229,6 +229,7 @@ metadata:
 provisioner: csi.hetzner.cloud
 volumeBindingMode: WaitForFirstConsumer
 allowVolumeExpansion: true
+reclaimPolicy: "Delete"
 {{ end }}
 
 {{ if eq .Config.CloudProvider.CloudProviderName "digitalocean" }}
