--- a/addons/unattended-upgrades/fluo.yaml
+++ b/addons/unattended-upgrades/fluo.yaml
@@ -121,6 +121,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: flatcar-linux-update-agent
+  namespace: reboot-coordinator
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
@@ -134,6 +135,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: flatcar-linux-update-operator-sa
+  namespace: reboot-coordinator
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -198,7 +200,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: {{ Registry "ghcr.io" }}/flatcar/flatcar-linux-update-operator:v0.9.0
+        image: '{{ Registry "ghcr.io" }}/flatcar/flatcar-linux-update-operator:v0.10.0-rc1'
         name: update-operator
       serviceAccountName: flatcar-linux-update-operator-sa
       tolerations:
@@ -249,7 +251,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: {{ Registry "ghcr.io" }}/flatcar/flatcar-linux-update-operator:v0.9.0
+        image: '{{ Registry "ghcr.io" }}/flatcar/flatcar-linux-update-operator:v0.10.0-rc1'
         name: update-agent
         securityContext:
           runAsUser: 0
