--- a/addons/operating-system-manager/crd-operating-system-profile.yaml
+++ b/addons/operating-system-manager/crd-operating-system-profile.yaml
@@ -3,8 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.9.2
-  creationTimestamp: null
+    controller-gen.kubebuilder.io/version: v0.13.0
   name: operatingsystemprofiles.operatingsystemmanager.k8c.io
 spec:
   group: operatingsystemmanager.k8c.io
@@ -470,6 +469,7 @@ spec:
                       - aws
                       - azure
                       - digitalocean
+                      - edge
                       - gce
                       - hetzner
                       - kubevirt
