--- a/addons/operating-system-manager/deployment-controller.yaml
+++ b/addons/operating-system-manager/deployment-controller.yaml
@@ -42,8 +42,8 @@ spec:
           command:
             - /usr/local/bin/osm-controller
           args:
-            - -logtostderr
-            - -v=4
+            - -log-debug=false
+            - -log-format=json # json or console
             - -health-probe-address=0.0.0.0:8085
             - -metrics-address=0.0.0.0:8080
             {{ if .Config.Features.NodeLocalDNS.Deploy -}}
