--- a/addons/ccm-gcp/ccm-gcp.yaml
+++ b/addons/ccm-gcp/ccm-gcp.yaml
@@ -300,12 +300,18 @@ spec:
               - key: node-role.kubernetes.io/master
                 operator: Exists
       containers:
-      - args: []
+      - args:
+        - /go-runner
+        - --redirect-stderr=true
+        - /cloud-controller-manager
+        - --cloud-provider=gce
+        - --cluster-name='{{ .Config.Name }}'
+        - --controllers=cloud-node-controller,cloud-node-lifecycle-controller
+        - --secure-port=10258
+        - --v=2
         env:
         - name: GOOGLE_APPLICATION_CREDENTIALS
           value: /etc/cloud-sa/cloud-sa.json
-        - name: KUBERNETES_SERVICE_HOST
-          value: 127.0.0.1
         image: '{{ .InternalImages.Get "GCPCCM" }}'
         imagePullPolicy: IfNotPresent
         livenessProbe:
